--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ image: assets/images/pic02.jpg
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
+<iframe align="absmiddle width="560" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
