--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Tempus
+title: Portfolio
 description: Feugiat amet tempus
 image: assets/images/pic02.jpg
 ---
 
-Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.
+Donec eget ex magna.
 
-<iframe align="absmiddle width="560" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
+<iframe align="middle width="800" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
