--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ image: assets/images/pic02.jpg
 
 Donec eget ex magna.
 
-<iframe align="middle width="800" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
+<iframe width="800" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
