--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: post
 title: Portfolio
-description: Feugiat amet tempus
+description: Several study projects
 image: assets/images/pic02.jpg
 ---
 
-Donec eget ex magna.
+<div>
+Привет.
+</div>
 
-<iframe width="800" height="315" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
+<iframe width="800" height="470" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
