--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: post
 title: Portfolio
 description: Several study projects
-image: Untitled-1.png
+image: assets/images/lights.png
 ---
 
 <div>
@@ -27,4 +27,5 @@ image: Untitled-1.png
   <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/way.gif">
   <p>
   <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/2.gif">
+  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif">
 </div>
