image size test

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ image: assets/images/lights.png
   <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/way.gif">
   <p>
   <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/2.gif">
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif">
+  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="500" height="333">
 </div>
