first project test

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
 ---
 layout: post
-title: Portfolio
-description: Several study projects
+title: Избранные проекты
+description: Портфолио
 image: assets/images/lights.png
 ---
 
 <div>
-Привет.
+<h1>Californication</h1>
+<h2>Экшн от первого лица</h2>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1280" height="720"></div>
+<p>Задачи проекта:
+  <ul>
+   <li>Настройка NavMesh</li>
+   <li>Разработка ИИ</li>
+   <li>Реализация стрельбы посредством Rigidbody</li>
+   <li>Работа с Post-Processing Stack и материалами</li>
+  </ul>
+<p>
+<p>Цель ботов — искать и атаковать игрока.
+<p>
+<p>Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
+<p>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1280" height="720"></div>
+<p>
+<p>Зеленые боты атакуют только игрока, Красные боты атакуют всех.
+<p>
 </div>
 
 <div align="center">
-<iframe width="800" height="470" src="https://www.youtube.com/embed/XFYWazblaUA" frameborder="0" allowfullscreen></iframe>
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/600.png">
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/800.png">
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/1000.png">    
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/Scene_0003.jpg">    
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/dog.png">    
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/ik.gif.gif">    
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/way.gif">
-  <p>
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/2.gif">
-  <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="500" height="333">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
+<p><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1280" height="720">
 </div>
