--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ image: assets/images/lights.png
 ---
 
 <div>
-<h1>Californication</h1>
-<h2>Экшн от первого лица</h2>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1280" height="720"></div>
+<h1>Californication — Экшн от первого лица</h1>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1440" height="810"></div>
+<p>
 <p>Задачи проекта:
   <ul>
    <li>Настройка NavMesh</li>
@@ -16,19 +16,20 @@ image: assets/images/lights.png
    <li>Реализация стрельбы посредством Rigidbody</li>
    <li>Работа с Post-Processing Stack и материалами</li>
   </ul>
+</p>
+<p>
 <p>
 <p>Цель ботов — искать и атаковать игрока.
-<p>
 <p>Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
 <p>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1280" height="720"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440" height="810"></div>
 <p>
 <p>Зеленые боты атакуют только игрока, Красные боты атакуют всех.
-<p>
 </div>
 
 <div align="center">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
-<p><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1280" height="720">
+<iframe width="720" height="405" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe>
+<iframe width="720" height="405" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
+<p>
+<p><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
 </div>
