--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@ image: assets/images/lights.png
 ---
 
 <div>
+<h1></h1>
 <h1>Californication — Экшн от первого лица</h1>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1440" height="810"></div>
 <p>
-<p>Задачи проекта:
+<p>
   <ul>
+  Задачи проекта:
    <li>Настройка NavMesh</li>
    <li>Разработка ИИ</li>
    <li>Реализация стрельбы посредством Rigidbody</li>
@@ -19,12 +21,11 @@ image: assets/images/lights.png
 </p>
 <p>
 <p>
-<p>Цель ботов — искать и атаковать игрока.
-<p>Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
+<p>Цель ботов — искать и атаковать игрока.<p>Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
 <p>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440" height="810"></div>
 <p>
-<p>Зеленые боты атакуют только игрока, Красные боты атакуют всех.
+<p>Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
 </div>
 
 <div align="center">
