--- a/index.html
+++ b/index.html
@@ -6,31 +6,38 @@ image: assets/images/lights.png
 ---
 
 <div>
-<h1></h1>
+<br>
+<br>
+<br>
 <h1>Californication — Экшн от первого лица</h1>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1440" height="810"></div>
-<p>
+<br>
 <p>
   <ul>
-  Задачи проекта:
+Задачи проекта:
    <li>Настройка NavMesh</li>
    <li>Разработка ИИ</li>
    <li>Реализация стрельбы посредством Rigidbody</li>
    <li>Работа с Post-Processing Stack и материалами</li>
   </ul>
 </p>
-<p>
-<p>
-<p>Цель ботов — искать и атаковать игрока.<p>Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
-<p>
+<br>
+<br>
+<p>Цель ботов — искать и атаковать игрока.<br>
+Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
+<br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440" height="810"></div>
-<p>
-<p>Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
+<br>
+<br>
+Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
 </div>
 
 <div align="center">
 <iframe width="720" height="405" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe>
 <iframe width="720" height="405" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
-<p>
-<p><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
+<br>
+<br>
+<br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
 </div>
+<hr>
