--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@ image: assets/images/lights.png
    <li>Работа с Post-Processing Stack и материалами</li>
   </ul>
 <p>Цель ботов — искать и атаковать игрока.<br>
-Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней. Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
+Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней.<br>
+Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
 <br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440" height="810"></div>
+<br>
 <br>
 Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
 <br>
@@ -36,3 +38,21 @@ image: assets/images/lights.png
 <br>
 <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
 </div>
+
+<h1>Четырехчасовые проекты</h1>
+<h2>Lucky Strike — Пазл для мобильных платформ</h2>
+Цель игры — сопоставить по цвету как можно больше разноцветных фигур.<br>
+Новые ряды фигур появляются через некоторое время. Ряды генерируются случайным образом.<br>
+Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда фигура достигает линии, игра заканчивается.<br>
+<br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif" width="1440" height="810"></div>
+<br>
+<h2>One Step Closer — Раннер для VR шлема Fibrum</h2>
+В разработке использован Fibrum SDK для Unity.<br>
+Цель игры — пробежать наибольшее расстояние, уворачиваясь от препятствий.<br>
+Допустимы две ошибки.<br>
+<br>
+Уровень генерируется по мере продвижения игрока вперед. Уже пройденный участок уровня, очищенный от препятствий, переносится вперед. Таким образом память не заполняется мусором. Препятствия возникают в случайных точках участка.<br>
+<br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif" width="1440" height="810"></div>
+
