--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@ image: assets/images/lights.png
 <br>
 <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
 </div>
-
+<br>
+<br>
+<br>
 <h1>Четырехчасовые проекты</h1>
 <h2>Lucky Strike — Пазл для мобильных платформ</h2>
 Цель игры — сопоставить по цвету как можно больше разноцветных фигур.<br>
 Новые ряды фигур появляются через некоторое время. Ряды генерируются случайным образом.<br>
 Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда фигура достигает линии, игра заканчивается.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif" width="1440" height="810"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif"></div>
 <br>
 <h2>One Step Closer — Раннер для VR шлема Fibrum</h2>
 В разработке использован Fibrum SDK для Unity.<br>
@@ -54,5 +56,5 @@ image: assets/images/lights.png
 <br>
 Уровень генерируется по мере продвижения игрока вперед. Уже пройденный участок уровня, очищенный от препятствий, переносится вперед. Таким образом память не заполняется мусором. Препятствия возникают в случайных точках участка.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif" width="1440" height="810"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif"></div>
 
