--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ image: assets/images/lights.png
 <br>
 <br>
 <h1>Californication — Экшн от первого лица</h1>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1440" height="810"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/californication.jpg" width="1440"></div>
 <br>
   <ul>
 Задачи проекта:
@@ -22,7 +22,7 @@ image: assets/images/lights.png
 Часть из них патрулирует территорию по заданным точкам. Остальные случайно выбирают точку на навмеше и двигаются к ней.<br>
 Если здоровье бота падает ниже определенного значения, он пытается достичь восстанавливающей камеры.
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440" height="810"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliNavMesh.jpg" width="1440"></div>
 <br>
 <br>
 Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
@@ -36,12 +36,15 @@ image: assets/images/lights.png
 <br>
 <br>
 <br>
-<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440" height="810">
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440">
 </div>
 <br>
 <br>
 <br>
+<br>
 <h1>Четырехчасовые проекты</h1>
+Эти небольшие проекты — своеобразное испытание / упражнение.<br>
+На каждый ушло менее четырех часов.<br>
 <h2>Lucky Strike — Пазл для мобильных платформ</h2>
 Цель игры — сопоставить по цвету как можно больше разноцветных фигур.<br>
 Новые ряды фигур появляются через некоторое время. Ряды генерируются случайным образом.<br>
