--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@ image: assets/images/lights.png
 <h1>Четырехчасовые проекты</h1>
 Эти небольшие проекты — своеобразное испытание / упражнение.<br>
 На каждый ушло менее четырех часов.<br>
+<br>
 <h2>Lucky Strike — Пазл для мобильных платформ</h2>
 Цель игры — сопоставить по цвету как можно больше разноцветных фигур.<br>
 Новые ряды фигур появляются через некоторое время. Ряды генерируются случайным образом.<br>
-Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда фигура достигает линии, игра заканчивается.<br>
+Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда любая фигура достигает линии, игра заканчивается.<br>
 <br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif"></div>
 <br>
@@ -57,7 +58,13 @@ image: assets/images/lights.png
 Цель игры — пробежать наибольшее расстояние, уворачиваясь от препятствий.<br>
 Допустимы две ошибки.<br>
 <br>
-Уровень генерируется по мере продвижения игрока вперед. Уже пройденный участок уровня, очищенный от препятствий, переносится вперед. Таким образом память не заполняется мусором. Препятствия возникают в случайных точках участка.<br>
+Препятствия возникают в случайных точках участка.<br>
+Уровень генерируется по мере продвижения игрока вперед. Уже пройденный участок уровня, очищенный от препятствий, переносится.<br>
+Таким образом память не заполняется мусором.<br>
 <br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif"></div>
+<br>
+<br>
+<br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="1440"></div>
 
