--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ image: assets/images/lights.png
 </div>
 
 <div align="center">
-<iframe width="720" height="405" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe>
-<iframe width="720" height="405" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
+<iframe width="1024" height="576" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe><br>
+<iframe width="1024" height="576" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
+<br>
 <br>
 <br>
 <br>
