--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ image: assets/images/lights.png
 <br>
 <br>
 <br>
-Зеленые боты атакуют только игрока, Красные боты атакуют всех. Если игрок отсутствует, все боты атакуют друг друга.
-<br>
+Зеленые боты атакуют только игрока, Красные боты атакуют всех.<br>
+Если игрок отсутствует, все боты атакуют друг друга.<br>
 <br>
 </div>
 
