--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@ image: assets/images/lights.png
 <br>
 <br>
 <br>
+<div align="center">Благодарю за внимание!</div>
+<br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="1440"></div>
 
