--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ image: assets/images/lights.png
 <br>
 <br>
 <br>
+<a href="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/Demo_WebGL/index.html">Platform Royale</a>
+<br>
 <div align="center">Благодарю за внимание!</div>
 <br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="1440"></div>
