--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ image: assets/images/lights.png
 <br>
 <br>
 <br>
-<a href="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/Demo_WebGL/index.html">Platform Royale</a>
+<a href="/Demo_WebGL/index.html">Platform Royale</a>
 <br>
 <div align="center">Благодарю за внимание!</div>
 <br>
