--- a/PlatformRoyale_WebGL/index.html
+++ b/PlatformRoyale_WebGL/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | PlatformRoyale</title>
+	<style>
+		body{
+			background-color: #252943;
+		}
+   </style>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>  
