--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ image: assets/images/lights.png
 <h1>Platform Royale — Командный проект</h1>
 2D платформер с элементами батлрояля.<br>
 В этом проекте я выполняю роли программиста и дизайнера уровней.<br>
-Можно ознакомиться с <a href="PlatformRoyale_WebGL/index.html">демо проекта Platform Royale</a>
+Можно запустить демо <a href="PlatformRoyale_WebGL/index.html">Platform Royale</a>
+<br>
 <h3>Особенности проекта</h3>
 Был реализован поиск путей для ИИ в 2D пространстве с видом сбоку.<br>
 NavMesh работает только в 3D проектах. В ассет сторе имеются решения только для топ-даун 2D проектов.<br>
@@ -79,37 +80,38 @@ NavMesh работает только в 3D проектах. В ассет ст
 Данный алгоритм работает с битовой картой уровня. Уровень должен быть логически разбит на свободные блоки и блоки препятствий.<br>
 Соответственно был реализован автоматический способ создания такой карты для уже существующих уровней.<br>
 Путь был получен, теперь его нужно было пройти. Для этого был реализован свой контроллер перемещения бота.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prPath.gif" width="1440"></div>
 <br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prPath.gif" width="1000"></div>
 <br>
 Стрельба реализована посредством рейкастов, но с учетом влияния гравитации.<br>
 Траектория выстрела всегда известна. Снаряды реалистично рикошетят от препятствий.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="1440"><br>
-<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBulletsFireworks.gif" width="1440">
-</div>
 <br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="1000"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBulletsFireworks.gif" width="1000">
+</div>
 <br>
 Этот же принцип использован для предсказания траектории полета персонажа, запущенного бустер-платформой.<br>
 Благодаря этому их легко расставлять на уровне и создавать интересные комбинации.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBoosters.gif" width="1440"></div>
 <br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBoosters.gif" width="1000"></div>
 <br>
 Безопасная зона со временем сужается.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="1440"></div>
 <br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="1000"></div>
 <br>
 Персонаж может отталкиваться от стен и выполнять двойной прыжок.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="1440"></div>
+<br>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prJumps.gif" width="1000"></div>
 <br>
 <br>
 <br>
 <br>
 <h1>Немного кода, программист же</h1>
-Маленький инструмент для переименовывания множества объектов.
+Маленький инструмент для переименовывания множества объектов в Unity.
+Требующие переименовывания объекты нужно сложить в корневой объект. Корневой объект затем помещается в слот окошка.<br>
 <div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/rename.gif" width="720"></div>
 <br>
-<pre><code>
-using UnityEngine;
+<pre><code>using UnityEngine;
 using UnityEditor;
 
 public class RenameObjectsWindow : EditorWindow
@@ -162,7 +164,6 @@ public class RenameObjectsWindow : EditorWindow
     }
 }
 </code></pre>
-<br>
 <br>
 <br>
 <br>
