--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@ image: assets/images/lights.png
 
 <div align="center">
 <iframe width="1024" height="576" src="https://www.youtube.com/embed/uUSlSHwGEnU" frameborder="0" allowfullscreen></iframe><br>
-<iframe width="1024" height="576" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe>
-<br>
-<br>
-<br>
-<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/caliScreen.jpg" width="1440">
+<iframe width="1024" height="576" src="https://www.youtube.com/embed/MYmse3a9PAw" frameborder="0" allowfullscreen></iframe><br>
 </div>
 <br>
 <br>
@@ -51,7 +47,7 @@ image: assets/images/lights.png
 Новые ряды фигур появляются через некоторое время. Ряды генерируются случайным образом.<br>
 Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда любая фигура достигает линии, игра заканчивается.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif"></div>
 <br>
 <h2>One Step Closer — Раннер для VR шлема Fibrum</h2>
 В разработке использован Fibrum SDK для Unity.<br>
@@ -62,7 +58,7 @@ image: assets/images/lights.png
 Уровень генерируется по мере продвижения игрока вперед. Уже пройденный участок уровня, очищенный от препятствий, переносится.<br>
 Таким образом память не заполняется мусором.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif"></div>
 <br>
 <br>
 <br>
@@ -70,7 +66,7 @@ image: assets/images/lights.png
 <h1>Platform Royale — Командный проект</h1>
 2D платформер с элементами батлрояля.<br>
 В этом проекте я выполняю роли программиста и дизайнера уровней.<br>
-Можно запустить демо <a href="PlatformRoyale_WebGL/index.html">Platform Royale</a>
+Можно запустить демо <a href="PlatformRoyale_WebGL/index.html">Platform Royale</a><br>
 <br>
 <h3>Особенности проекта</h3>
 Был реализован поиск путей для ИИ в 2D пространстве с видом сбоку.<br>
@@ -81,35 +77,36 @@ NavMesh работает только в 3D проектах. В ассет ст
 Соответственно был реализован автоматический способ создания такой карты для уже существующих уровней.<br>
 Путь был получен, теперь его нужно было пройти. Для этого был реализован свой контроллер перемещения бота.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prPath.gif" width="1000"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prPath2.gif" width="1000"></div>
 <br>
 Стрельба реализована посредством рейкастов, но с учетом влияния гравитации.<br>
 Траектория выстрела всегда известна. Снаряды реалистично рикошетят от препятствий.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="1000"><br>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="1000"><br>
 <img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBulletsFireworks.gif" width="1000">
 </div>
 <br>
 Этот же принцип использован для предсказания траектории полета персонажа, запущенного бустер-платформой.<br>
 Благодаря этому их легко расставлять на уровне и создавать интересные комбинации.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBoosters.gif" width="1000"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBoosters.gif" width="1000"></div>
 <br>
 Безопасная зона со временем сужается.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="1000"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="1000"></div>
 <br>
 Персонаж может отталкиваться от стен и выполнять двойной прыжок.<br>
 <br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prJumps.gif" width="1000"></div>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prJumps.gif" width="1000"></div>
 <br>
 <br>
 <br>
 <br>
 <h1>Немного кода, программист же</h1>
-Маленький инструмент для переименовывания множества объектов в Unity.
+Маленький инструмент для переименовывания множества объектов в Unity.<br>
 Требующие переименовывания объекты нужно сложить в корневой объект. Корневой объект затем помещается в слот окошка.<br>
-<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/rename.gif" width="720"></div>
+<br>
+<div align="left"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/rename.gif" width="720"></div>
 <br>
 <pre><code>using UnityEngine;
 using UnityEditor;
